<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SendMeal</string>
    <string name="nom">Nombre</string>
    <string name="pass">Clave</string>
    <string name="confpass">Confirmación Clave</string>
    <string name="correo">Correo electrónico</string>
    <string name="tarj">Tarjeta de Crédito</string>
    <string name="numt">Número</string>
    <string name="ccvt">CCV</string>
    <string name="fechat">MM/AA</string>
    <string name="tipocu">Tipo de Cuenta</string>
    <string name="bas">Básica</string>
    <string name="prem">Premium</string>
    <string name="full">Full</string>
    <string name="cred">Crédito Inicial</string>
    <string name="recibirnot">Recibir notificaciones por E-Mail: SI</string>
    <string name="norecibirnot">Recibir notificaciones por E-Mail: NO</string>
    <string name="esven">Es Vendedor</string>
    <string name="aceptartyc">Acepto Terminos y Condiciones</string>
    <string name="cbu">CBU</string>
    <string name="aliascbu">Alias CBU</string>
    <string name="reg">Registrar</string>
    <string name="cantidad">Cantidad</string>

    <string name="vacio"></string>

    <string name="faltanDatos">Debe completar todos los campos</string>
    <string name="clavesDistintas">Las claves no coinciden</string>
    <string name="emailNoValido">El e-mail ingresado no es válido</string>
    <string name="tarjetaVencimiento">La tarjeta debe tener vencimiento mayor a 3 meses</string>
    <string name="guardadoExitoso">El registro ha sido exitoso</string>

    <!-- Menu -->
    <string name="menuItemRegistrar">Registrar</string>
    <string name="menuItemCrear">Crear nuevo plato</string>
    <string name="menuItemConsultar">Consultar platos</string>
    <string name="menuItemBuscar">Buscar platos</string>
    <string name="menuItemRegistrarPedido">Registrar pedido</string>
    <string name="menuPedidosEnMapa">Mapa de pedidos</string>

    <!-- Pantalla alta nuevo plato-->
    <string name="idANP">ID</string>
    <string name="tituloANP">Título</string>
    <string name="descripcionANP">Descripción</string>
    <string name="precioANP">Precio</string>
    <string name="caloriasANP">Calorías</string>
    <string name="tomarFoto">Tomar foto</string>
    <string name="guardarNuevoPlatoANP">Guardar Plato</string>
    <string name="platoCreado">El plato se ha creado con éxito</string>

    <!-- CardView plato -->
    <string name="nombrePlatoListaPlato">Nombre: </string>
    <string name="precioPlatoListaPlato">Precio: </string>
    <string name="cantidadPlatoPedido">Cantidad: </string>

    <!-- Lista Platos -->
    <string name="dialogoEliminarPlato">¿Desea eliminar el plato de la lista?</string>
    <string name="tituloDialogo">Eliminar plato</string>
    <string name="txtBtnEditar">Editar</string>
    <string name="txtBtnOfertar">Ofertar</string>
    <string name="txtBtnEliminar">Eliminar</string>

    <!-- Oferta Platos -->
    <string name="platoOfertado">El plato se esta preparando para ofertar</string>

    <!-- Busqueda Platos -->
    <string name="rangoPreciosBusqueda">Rango de precios</string>
    <string name="nombreBusquedaPlatos">Nombre de plato</string>
    <string name="nombreBotonBuscar">Buscar</string>

    <!-- Registro Pedidos -->
    <string name="txtBtnEditarPedido">Editar pedido</string>
    <string name="txtBtnEliminarPlatoPedido">Eliminar del pedido</string>
    <string name="txtBtnAgregarComida">Agregar comida</string>
    <string name="txtBtnCrearPedido">Crear pedido</string>
    <string name="txtBtnEnviarPedido">Enviar pedido</string>
    <string name="txtBtnAgregarPedido">Agregar al pedido</string>
    <string name="dialogoQuitarPlatoPedido">¿Desea quitar el plato del pedido?</string>

    <!-- Notificaciones -->
    <string name="nombreCanal">Ofertas</string>
    <string name="descripcionCanal">Canal utilizado para notificaciones de platos en oferta</string>
    <string name="nombreNotificacionOferta">Oferta</string>
    <string name="detalleNotificacionOferta">esta en oferta!!</string>


    <!-- Mapas -->
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCuYHwH_F4qzlVLJYDJWIR5FZWS_eN5loA</string>
    <string name="title_activity_mapa_pedidos">Map</string>
    <string name="title_activity_maps2">Map</string>

</resources>
