<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/back_toolbar"/>

    <TextView
        android:id="@+id/textIdEditarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idANP" />

    <EditText
        android:id="@+id/editNumIDEditarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textTituloEditarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloANP" />

    <EditText
        android:id="@+id/editTituloEditarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textDescripcionEditarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcionANP" />

    <EditText
        android:id="@+id/editDescripcionEditarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10" />

    <TextView
        android:id="@+id/textPrecioEditarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/precioANP" />

    <EditText
        android:id="@+id/editPrecioEditarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textCaloriasEditarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caloriasANP" />

    <EditText
        android:id="@+id/editCaloriasEditarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonGuardarPlatoEditarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardarNuevoPlatoANP"/>

</LinearLayout>