<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/back_toolbar"/>

    <ImageView
        android:id="@+id/imagenPlatoMostrarPlato"
        android:layout_width="match_parent"
        android:layout_height="240dp" />

    <TextView
        android:id="@+id/textIdMostrarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idANP" />

    <EditText
        android:id="@+id/editNumIDMostrarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"/>

    <TextView
        android:id="@+id/textTituloMostrarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloANP" />

    <EditText
        android:id="@+id/editTituloMostrarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"/>

    <TextView
        android:id="@+id/textDescripcionMostrarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcionANP" />

    <EditText
        android:id="@+id/editDescripcionMostrarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:enabled="false"/>

    <TextView
        android:id="@+id/textPrecioEditarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/precioANP" />

    <EditText
        android:id="@+id/editPrecioMostrarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textCaloriasMostrarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caloriasANP" />

    <EditText
        android:id="@+id/editCaloriasMostrarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="number" />

</LinearLayout>