<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/back_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtRangoBP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rangoPreciosBusqueda" />

        <EditText
            android:id="@+id/editMinBP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="00" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---" />

        <EditText
            android:id="@+id/editMaxBP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="100000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtNombrePlatoBP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreBusquedaPlatos" />

        <EditText
            android:id="@+id/editNombreBP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Nombre"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonBuscarBP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombreBotonBuscar"
        android:visibility="visible" />


</LinearLayout>